Fix flickering issue when hover clickables (#341)

--- a/src/assets/styles/utilities/mixins.scss
+++ b/src/assets/styles/utilities/mixins.scss
@@ -213,7 +213,8 @@ $border-radius-inner: 8px;
 }
 
 @mixin clickable {
-  transition: opacity 150ms ease;
+  transition: filter 150ms ease;
+  filter: brightness(1);
 
   & {
     cursor: pointer;
@@ -221,15 +222,15 @@ $border-radius-inner: 8px;
   }
 
   @include hover {
-    opacity: 0.85;
+    filter: brightness(0.8);
   }
 
   &:active {
-    opacity: 0.7;
+    filter: brightness(0.6);
   }
 
   &:disabled {
-    opacity: 0.5;
+    filter: brightness(0.4);
   }
 }
 
